welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: '(' expected but 'if' found.
if (h==Z) 
^BDRBuggle:7: error: ';' expected but 'else' found.
else if (h==R)
^BDRBuggle:9: error: ';' expected but 'else' found.
else if (h==L)
^BDRBuggle:11: error: ';' expected but 'else' found.
else if (h==I)
^BDRBuggle:15: error: ';' expected but 'else' found.
else if (h==A)
^BDRBuggle:17: error: ';' expected but 'else' found.
else if (h==B)
^BDRBuggle:20: error: ';' expected but 'else' found.
else if (h==C)
^BDRBuggle:24: error: ';' expected but 'else' found.
else if (h==Y)
^BDRBuggle:27: error: ';' expected but 'else' found.
else if (h==X)
^