welcome.lessons.welcome.bdr.BDR.scala.code
var h : String=""
while 


if (h==Z) 
recule();
else if (h==R)
droite();
else if (h==L)
gauche();
else if (h==I)
droite()
droite()
avance();
else if (h==A)
avance();
else if (h==B)
avance()
avance();
else if (h==C)
avance()
avance()
avance();
else if (h==Y)
recule()
recule();
else if (h==X)
recule()
recule()
recule();
